<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    >

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_80jdp"
        android:layout_marginTop="@dimen/_30jdp"
        android:contentDescription="@string/imgcd_image"
        android:src="@drawable/ic_logo_fis"
        />

    <com.fis.fisglobal.lib.widget.edittext.MediumEditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/employee_id"
        android:id="@+id/employeeId"
        android:layout_marginTop="50dp"
        android:inputType="text"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/confirmLayout"
    android:visibility="gone"
    >
    <com.fis.fisglobal.lib.widget.edittext.MediumEditText
        android:layout_width="300dp"
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <com.fis.fisglobal.lib.widget.edittext.MediumEditText
        android:layout_width="300dp"
        android:id="@+id/passCode"
        android:layout_height="wrap_content"
        android:hint="@string/pass_code"
        android:inputType="text"
        />
</LinearLayout>
    <com.fis.fisglobal.lib.widget.button.MediumButton
        style="@style/TextLarge"
        android:id="@+id/submit"
        android:background="@drawable/bg_btn_primary_style"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/action_login"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />
</LinearLayout>